Prepare for crates.io publishing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
 name = "icmp-socket"
+description = "ICMP sockets for both IPv4 and IPv6"
 version = "0.1.0"
+repository = "https://github.com/zaphar/icmp-socket"
 authors = ["Jeremy Wall <jeremy@marzhillstudios.com>"]
 edition = "2018"
+license = "Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
