--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "icmp-socket"
 description = "ICMP sockets for both IPv4 and IPv6"
-version = "0.1.1"
+version = "0.1.2"
 repository = "https://github.com/zaphar/icmp-socket"
 authors = ["Jeremy Wall <jeremy@marzhillstudios.com>"]
 edition = "2018"
@@ -10,5 +10,8 @@ license = "Apache-2.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-socket2 = "0.3.19"
 byteorder = "1.3.4"
+
+[dependencies.socket2]
+version = "0.4.4"
+features=[ "all" ]
